--- a/html/form.html
+++ b/html/form.html
@@ -41,55 +41,55 @@
                 <div class="fields">
                     <div class="input-field">
                         <label>Full Name</label>
-                        <input type="text" placeholder="Enter your name" required>
+                        <input type="text" placeholder="Rizki Arya" required>
                     </div>
 
                     <div class="input-field">
                         <label>Email</label>
-                        <input type="text" placeholder="Enter your email" required>
+                        <input type="text" placeholder="abc123@gmail.com" required>
                     </div>
 
                     <div class="input-field">
                         <label>Phone</label>
-                        <input type="number" placeholder="Enter your number" required>
+                        <input type="number" placeholder="0857********" required>
                     </div>
 
                     <div class="input-field">
                         <label>Rooms</label>
-                        <input type="dropdown" placeholder="Choose your room" required>
+                        <input type="dropdown" placeholder="Choose your Rooms" required>
                     </div>
 
                     <div class="input-field">
                         <label>Check In</label>
-                        <input type="date" placeholder="" required height="30px">
+                        <input type="date" placeholder="mm/dd/yyyy" required height="30px">
                     </div>
 
                     <div class="input-field">
                         <label>Check Out</label>
-                        <input type="date" placeholder="" required>
+                        <input type="date" placeholder="mm/dd/yyyy" required>
                     </div>
                         
                     <div class="input-field">
                         <label>Addults</label>
-                        <input type="number" placeholder="Enter your occupation" required>
+                        <input type="number" placeholder="Enter your Occupation" required>
                     </div>
 
                     <div class="input-field">
                         <label>Childs</label>
-                        <input type="number" placeholder="Enter childs" required>
+                        <input type="number" placeholder="Enter Childs" required>
                     </div>
                 </div>
 
                     <div class="buttons">
                         <div class="bookBtn">
-                            <span class="btnText">Booking</span>
+                            <span class="btnText">Booking Now</span>
                             <box-icon name='reset'></box-icon>
                         </div>
 
-                        <div class="resetBtn">
+                        <!-- <div class="resetBtn">
                             <span class="btnText">Reset</span>
                             <box-icon name='reset'></box-icon>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
