--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team</title>
+    <title>Luxury Hotel</title>
     <link rel="stylesheet" href="/css/ourteam.css">
 	<link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,7 +17,7 @@
 
     <div>
       <ul id="navbar">
-          <li><a class="active" href="/index.html">Home</a></li>
+          <li><a class="active" href="home.html">Home</a></li>
           <li><a href="rooms.html">Rooms</a></li>
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
