--- a/html/form.html
+++ b/html/form.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
-    <link rel="stylesheet" href="/css/form.css">
-	<link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-</head>
+    <link rel="stylesheet" href="/css/form.css" />
+    <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
+  </head>
 
-<body>
-<!-- Header Start -->
-<header>
-    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+  <body>
+    <!-- Header Start -->
+    <header>
+      <a href="#"
+        ><img src="/images/logo.png" class="logo" width="150" height="120"
+      /></a>
 
-    <div>
-      <ul id="navbar">
+      <div>
+        <ul id="navbar">
           <li><a class="active" href="/index.html">Home</a></li>
           <li><a href="rooms.html">Rooms</a></li>
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
           <li><a href="ourteam.html">Our Teams</a></li>
-          <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
-          <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
-      </ul>
-    </div>
-    <div id="mobile">
-      <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
-      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
-    </div>
-</header>
-<!-- End Header -->
+          <li>
+            <a id="login" href="login.html"><i class="fas fa-user"></i></a>
+          </li>
+          <a href="#" id="close"
+            ><i class="fas fa-times" style="color: #b9a13f"></i
+          ></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="login.html"
+          ><i class="fas fa-user" style="color: #b9a13f"></i
+        ></a>
+        <i id="bar" class="fas fa-outdent" style="color: #b9a13f"></i>
+      </div>
+    </header>
+    <!-- End Header -->
     <!-- <div class="container">
         <h1>Booking Rooms</h1>
 
@@ -117,173 +131,176 @@
             </div>
         </form>
     </div> -->
-        <!-- Shipping Information -->
-        <!-- <div class="row-content">  -->
-          <div class="container"> 
-            <h1>Booking Rooms</h1>
-            <form id="form">
-              <div class="fields">
-                <div class="input-field">
-                  <label>Fullname</label> <!-- Fullname -->
-                  <input
-                    id="fullname"
-                    type="text"
-                    placeholder="Rizki Arya"
-                    name="fullname"
-                    required
-                  />
-                </div>
+    <!-- Shipping Information -->
+    <!-- <div class="row-content">  -->
+    <div class="container">
+      <h1>Booking Rooms</h1>
+      <form id="form">
+        <div class="fields">
+          <div class="input-field">
+            <label>Fullname</label>
+            <!-- Fullname -->
+            <input
+              id="fullname"
+              type="text"
+              placeholder="Rizki Arya"
+              name="fullname"
+              required
+            />
+          </div>
 
-                <div class="input-field"> <!-- Email -->
-                  <label>Email</label>
-                  <input 
-                  id="email" 
-                  type="email" 
-                  placeholder="abc123@gmail.com"
-                  name="email"
-                  required 
-                   />
-                </div>
+          <div class="input-field">
+            <!-- Email -->
+            <label>Email</label>
+            <input
+              id="email"
+              type="email"
+              placeholder="abc123@gmail.com"
+              name="email"
+              required
+            />
+          </div>
 
-                 <div class="input-field"> <!-- No Telpon -->
-                  <label>Phone</label>
-                  <input
-                    id="phone"
-                    type="number"
-                    maxlength="13"
-                    placeholder="08577045****"
-                    name="phone"
-                    required
-                  />
-                </div>
+          <div class="input-field">
+            <!-- No Telpon -->
+            <label>Phone</label>
+            <input
+              id="phone"
+              type="number"
+              maxlength="13"
+              placeholder="08577045****"
+              name="phone"
+              required
+            />
+          </div>
 
-                      <div class="input-field">
-                        <label>Rooms</label>
-                        <div class="select" required>
-                            <select id="rooms" >
-                               <option selected disabled>Choose your Rooms</option>
-                               <option value="basic">Deluxe Basic</option>
-                               <option value="common">Deluxe Common</option>
-                               <option value="rare">Deluxe Rare</option>
-                               <option value="spesial">Executive Spesial</option>
-                               <option value="epic">Executive Epic</option>
-                               <option value="legendary">Executive Legendary</option>
-                            </select>
-                         </div>
-                      </div>
+          <div class="input-field">
+            <label>Rooms</label>
+            <div class="select" required>
+              <select id="rooms">
+                <option selected disabled>Choose your Rooms</option>
+                <option value="basic">Deluxe Basic</option>
+                <option value="common">Deluxe Common</option>
+                <option value="rare">Deluxe Rare</option>
+                <option value="spesial">Executive Spesial</option>
+                <option value="epic">Executive Epic</option>
+                <option value="legendary">Executive Legendary</option>
+              </select>
+            </div>
+          </div>
 
-                <div class="input-field">
-                  <label>Check In</label>
-                  <input 
-                  type="date" 
-                  id="checkin" 
-                  placeholder="mm/dd/yyyy" 
-                  required >
-                </div>
+          <div class="input-field">
+            <label>Check In</label>
+            <input type="date" id="checkin" placeholder="mm/dd/yyyy" required />
+          </div>
 
-                <div class="input-field">
-                    <label>Check Out</label>
-                    <input 
-                    type="date" 
-                    id="checkout" 
-                    placeholder="mm/dd/yyyy" 
-                    required>
-                </div>
+          <div class="input-field">
+            <label>Check Out</label>
+            <input
+              type="date"
+              id="checkout"
+              placeholder="mm/dd/yyyy"
+              required
+            />
+          </div>
 
-                <div class="input-field">
-                  <label>Adults</label>
-                  <div class="select">
-                      <select id="adult">
-                        <option selected disabled>Occupation</option>
-                        <option value="One">One</option>
-                        <option value="Two">Two</option>
-                        <option value="Three">Three</option>
-                        <option value="Four">Four</option>
-                        <option value="Five">Five</option>
-                      </select>
-                  </div>
-                </div>
-                <div class="input-field">
-                    <label>Childs</label>
-                    <div class="select">
-                        <select id="child">
-                          <option selected disabled>Childs</option>
-                          <option value="One">One</option>
-                          <option value="Two">Two</option>
-                          <option value="Three">Three</option>
-                          <option value="Four">Four</option>
-                          <option value="Five">Five</option>
-                        </select>
-                    </div>
-                </div>
+          <div class="input-field">
+            <label>Adults</label>
+            <div class="select">
+              <select id="adult">
+                <option selected disabled>Occupation</option>
+                <option value="One">One</option>
+                <option value="Two">Two</option>
+                <option value="Three">Three</option>
+                <option value="Four">Four</option>
+                <option value="Five">Five</option>
+              </select>
+            </div>
+          </div>
+          <div class="input-field">
+            <label>Childs</label>
+            <div class="select">
+              <select id="child">
+                <option selected disabled>Childs</option>
+                <option value="One">One</option>
+                <option value="Two">Two</option>
+                <option value="Three">Three</option>
+                <option value="Four">Four</option>
+                <option value="Five">Five</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="buttons">
+          <button
+            type="submit"
+            class="btnText"
+            id="konfirmasiBtn"
+            value="submit"
+          >
+            Konfirmasi Pesanan
+          </button>
+        </div>
+      </form>
 
-              </div>
-                <div class="buttons">
-                  <button type="submit" class="btnText" id="konfirmasiBtn" value="submit">
-                    Konfirmasi Pesanan
-                  </button>
-                </div>
+      <!-- First Modal -->
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <div class="img-bill">
+            <h3>Receipt</h3>
+            <hr />
+          </div>
+          <div class="list-order">
+            <div class="list-detail">
+              <p class="menu-bill">Fullname :</p>
+              <hr />
 
-            </form>
-
-            <!-- First Modal -->
-            <div id="myModal" class="modal">
-              <div class="modal-content">
-                <div class="img-bill">
-                  <h3>Receipt</h3>
-                  <hr />
-                </div>
-                <div class="list-order">
-                  <div class="list-detail">
-                    <p class="menu-bill">Fullname :</p>
-                    <hr />
-                    
-                    <hr />
-                    <p class="price">Rizki Arya</p>
-                  </div>
-                  <hr />
-                  <div class="list-detail">
-                    <p class="menu-bill">Ayam Taliwang</p>
-                    <hr />
-                    <p class="qty">1</p>
-                    <hr />
-                    <p class="price">Rp 65.000</p>
-                  </div>
-                  <hr />
-                  <div class="list-detail">
-                    <p class="menu-bill">Ayam Taliwang</p>
-                    <hr />
-                    <p class="qty">1</p>
-                    <hr />
-                    <p class="price">Rp 65.000</p>
-                  </div>
-                  <hr />
-                  <div class="list-detail">
-                    <p class="menu-bill">Ayam Taliwang</p>
-                    <hr />
-                    <p class="qty">1</p>
-                    <hr />
-                    <p class="price">Rp 65.000</p>
-                  </div>
-                  <hr />
-                  <div class="list-detail">
-                    <p class="menu-bill">Ayam Taliwang</p>
-                    <hr />
-                    <p class="qty">1</p>
-                    <hr />
-                    <p class="price">Rp 65.000</p>
-                  </div>
-                  <hr />
-                  <div class="list-detail">
-                    <p class="menu-bill">Ayam Taliwang</p>
-                    <hr />
-                    <p class="qty">1</p>
-                    <hr />
-                    <p class="price">Rp 65.000</p>
-                  </div>
-                  <hr />
-                </div>
-                <!-- <div class="subtotal-bill">
+              <hr />
+              <p class="price">Rizki Arya</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Ayam Taliwang</p>
+              <hr />
+              <p class="qty">1</p>
+              <hr />
+              <p class="price">Rp 65.000</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Ayam Taliwang</p>
+              <hr />
+              <p class="qty">1</p>
+              <hr />
+              <p class="price">Rp 65.000</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Ayam Taliwang</p>
+              <hr />
+              <p class="qty">1</p>
+              <hr />
+              <p class="price">Rp 65.000</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Ayam Taliwang</p>
+              <hr />
+              <p class="qty">1</p>
+              <hr />
+              <p class="price">Rp 65.000</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Ayam Taliwang</p>
+              <hr />
+              <p class="qty">1</p>
+              <hr />
+              <p class="price">Rp 65.000</p>
+            </div>
+            <hr />
+          </div>
+          <!-- <div class="subtotal-bill">
                   <div class="subtotal-left">
                     <p>Subtotal</p>
                     <p>Biaya Antar</p>
@@ -295,33 +312,31 @@
                     <h3>Rp.105.000</h3>
                   </div>
                 </div> -->
-                <div class="modal-title">
-                  <h1>Sudah yakin dengan pesanan Anda?</h1>
-                </div>
-                <div class="button-modal">
-                  <button class="close" id="closeModalBtn">Ubah pesanan</button>
-                  <button class="close-btn" id="nextModalBtn">
-                    Ya, Lanjutkan pesanan
-                  </button>
-                </div>
-              </div>
-            </div>
-            <!-- End of First Modal  -->
-
-            <!-- Second Modal -->
-            <div id="myModal2" class="modal2">
-              <div class="modal-content2">
-                <h1>Terima kasih!</h1>
-                <p>Pesanan anda sedang diproses.</p>
-                <button class="close-btn" id="homeBtn">
-                  Kembali ke Beranda
-                </button>
-              </div>
-            </div>
-            <!-- End of Second Modal -->
+          <div class="modal-title">
+            <h1>Sudah yakin dengan pesanan Anda?</h1>
           </div>
-        <!-- </div> -->
-        <!-- End of Shipping Information -->
+          <div class="button-modal">
+            <button class="close" id="closeModalBtn">Ubah pesanan</button>
+            <button class="close-btn" id="nextModalBtn">
+              Ya, Lanjutkan pesanan
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- End of First Modal  -->
+
+      <!-- Second Modal -->
+      <div id="myModal2" class="modal2">
+        <div class="modal-content2">
+          <h1>Terima kasih!</h1>
+          <p>Pesanan anda sedang diproses.</p>
+          <button class="close-btn" id="homeBtn">Kembali ke Beranda</button>
+        </div>
+      </div>
+      <!-- End of Second Modal -->
+    </div>
+    <!-- </div> -->
+    <!-- End of Shipping Information -->
     <script src="/js/form.js"></script>
-</body>
+  </body>
 </html>
