--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <div>
       <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="./html/rooms.html">Rooms</a></li>
-          <li><a href="./html/facilities.html">Facilities</a></li>
-          <li><a href="./html/faq.html">Faq</a></li>
-          <li><a href="./html/ourteam.html">Our Teams</a></li>
-          <li><a id="login" href="/login/login.html"><i class="fas fa-user"></i></a></li>
+          <li><a href="/html/rooms.html">Rooms</a></li>
+          <li><a href="/html/facilities.html">Facilities</a></li>
+          <li><a href="/html/faq.html">Faq</a></li>
+          <li><a href="/html/ourteam.html">Our Teams</a></li>
+          <!-- <li><a id="login" href="/login/login.html"><i class="fas fa-user"></i></a></li> -->
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
     </div>
     <div id="mobile">
-      <a href="/login/login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+      <!-- <a href="/login/login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
       <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
     </div>
 </header>
@@ -231,21 +231,21 @@
                 <h4>Luxury Hotel</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="./html/rooms.html">Rooms</a></li>
-                    <li><a href="./html/facilities.html">Facilities</a></li>
-                    <li><a href="./html/faq.html">Faq</a></li>
-                    <li><a href="./html/ourteam.html">Our Team</a></li>
+                    <li><a href="/html/rooms.html">Rooms</a></li>
+                    <li><a href="/html/facilities.html">Facilities</a></li>
+                    <li><a href="/html/faq.html">Faq</a></li>
+                    <li><a href="/html/ourteam.html">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Tipe-tipe Rooms</h4>
                 <ul>
-                    <li><a href="./html/rooms.html#basic">Deluxe Basic</a></li>
-                    <li><a href="./html/rooms.html#common">Deluxe Common</a></li>
-                    <li><a href="./html/rooms.html#rare">Deluxe Rare</a></li>
-                    <li><a href="./html/rooms.html#spesial">Executive Spesial</a></li>
-                    <li><a href="./html/rooms.html#epic">Executive Epic</a></li>
-                    <li><a href="./html/rooms.html#legendary">Executive Legendary</a></li>
+                    <li><a href="/html/rooms.html#basic">Deluxe Basic</a></li>
+                    <li><a href="/html/rooms.html#common">Deluxe Common</a></li>
+                    <li><a href="/html/rooms.html#rare">Deluxe Rare</a></li>
+                    <li><a href="/html/rooms.html#spesial">Executive Spesial</a></li>
+                    <li><a href="/html/rooms.html#epic">Executive Epic</a></li>
+                    <li><a href="/html/rooms.html#legendary">Executive Legendary</a></li>
                 </ul>
             </div>
             <div class="footer-col">
