--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Hotel</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     
@@ -14,15 +14,15 @@
 <body>
 <!-- Header Start -->
 <header>
-    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+    <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
 
     <div>
       <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="/html/rooms.html">Rooms</a></li>
-          <li><a href="/html/facilities.html">Facilities</a></li>
-          <li><a href="/html/faq.html">Faq</a></li>
-          <li><a href="/html/ourteam.html">Our Teams</a></li>
+          <li><a href="html/rooms.html">Rooms</a></li>
+          <li><a href="html/facilities.html">Facilities</a></li>
+          <li><a href="html/faq.html">Faq</a></li>
+          <li><a href="html/ourteam.html">Our Teams</a></li>
           <!-- <li><a id="login" href="/login/login.html"><i class="fas fa-user"></i></a></li> -->
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
