--- a/html/form.html
+++ b/html/form.html
@@ -247,56 +247,72 @@
       <div id="myModal" class="modal">
         <div class="modal-content">
           <div class="img-bill">
-            <h3>Receipt</h3>
+            <h2>Receipt</h2>
             <hr />
           </div>
           <div class="list-order">
             <div class="list-detail">
               <p class="menu-bill">Fullname :</p>
-              <hr />
-
-              <hr />
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
               <p class="price">Rizki Arya</p>
             </div>
             <hr />
             <div class="list-detail">
-              <p class="menu-bill">Ayam Taliwang</p>
-              <hr />
-              <p class="qty">1</p>
-              <hr />
-              <p class="price">Rp 65.000</p>
+              <p class="menu-bill">Email  :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">abc123@gmail.com</p>
             </div>
             <hr />
             <div class="list-detail">
-              <p class="menu-bill">Ayam Taliwang</p>
-              <hr />
-              <p class="qty">1</p>
-              <hr />
-              <p class="price">Rp 65.000</p>
+              <p class="menu-bill">Phone  :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">123456789000</p>
             </div>
             <hr />
             <div class="list-detail">
-              <p class="menu-bill">Ayam Taliwang</p>
-              <hr />
-              <p class="qty">1</p>
-              <hr />
-              <p class="price">Rp 65.000</p>
+              <p class="menu-bill">Rooms  :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">Executive Epic</p>
             </div>
             <hr />
             <div class="list-detail">
-              <p class="menu-bill">Ayam Taliwang</p>
-              <hr />
-              <p class="qty">1</p>
-              <hr />
-              <p class="price">Rp 65.000</p>
+              <p class="menu-bill">Check In :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">12-02-2023</p>
             </div>
             <hr />
             <div class="list-detail">
-              <p class="menu-bill">Ayam Taliwang</p>
-              <hr />
-              <p class="qty">1</p>
-              <hr />
-              <p class="price">Rp 65.000</p>
+              <p class="menu-bill">Check Out  :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">12-03-2023</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Adults :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">Two</p>
+            </div>
+            <hr />
+            <div class="list-detail">
+              <p class="menu-bill">Childs :</p>
+              <!-- <hr />
+              <p class="qty">:</p>
+              <hr /> -->
+              <p class="price">One</p>
             </div>
             <hr />
           </div>
@@ -313,12 +329,12 @@
                   </div>
                 </div> -->
           <div class="modal-title">
-            <h1>Sudah yakin dengan pesanan Anda?</h1>
+            <h2>Are you sure about your room booking?</h2>
           </div>
           <div class="button-modal">
-            <button class="close" id="closeModalBtn">Ubah pesanan</button>
+            <button class="close" id="closeModalBtn">Modify Selection</button>
             <button class="close-btn" id="nextModalBtn">
-              Ya, Lanjutkan pesanan
+              Booking Confirmation
             </button>
           </div>
         </div>
@@ -328,9 +344,10 @@
       <!-- Second Modal -->
       <div id="myModal2" class="modal2">
         <div class="modal-content2">
-          <h1>Terima kasih!</h1>
-          <p>Pesanan anda sedang diproses.</p>
-          <button class="close-btn" id="homeBtn">Kembali ke Beranda</button>
+          <h2>Thank you for booking the rooms.</h2>
+          <br>
+          <p>Your order is being processed.</p>
+          <button class="close-btn" id="homeBtn">Back to Homepage</button>
         </div>
       </div>
       <!-- End of Second Modal -->
