--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p><br>Relax & Recharge with our luxury rooms</p>
             <a href="#about" class="buttons">View More</a>
         </div>
-        <img src="images/Luxury Hotel.jpg" style="width: 100%; height: 100%;">
+        <img src="images/luxuryHotel.jpg" style="width: 100%; height: 100%;">
     </div>
     
     <div class="wrapper-main">
